src/test/deca/context/valid/created/instanceof.deca
class A{
}
class B extends A{
}
{
	
	A a = new B();
	a instanceof B;

}