src/test/deca/context/invalid/created/illegal-new.deca
class A{

}
class B{

}
{
	A a = new B();
}
